New backtracking solution for Subsets